# h1amg

./: CMakeLists.txt
python/: cube_amg.py
src/: CMakeLists.txt  h1.cpp  h1.hpp  h1amg.cpp  h1amg.hpp  python_amg.cpp
